--- a/manifests/controller-manager/openstack-cloud-controller-manager-ds.yaml
+++ b/manifests/controller-manager/openstack-cloud-controller-manager-ds.yaml
@@ -5,6 +5,19 @@ metadata:
   name: cloud-controller-manager
   namespace: kube-system
 ---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: system:cloud-controller-manager
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: cloud-controller-manager
+  namespace: kube-system
+---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -23,7 +36,6 @@ spec:
       labels:
         k8s-app: openstack-cloud-controller-manager
     spec:
-      hostNetwork: true
       securityContext:
         runAsUser: 1001
       tolerations:
